# kraken

./: .gitignore
NewBeaEngineResearch/: NewBeaEngineResearch.sln
NewBeaEngineResearch/Debug/: NewBeaEngineResearch.ilk
NewBeaEngineResearch/NewBeaEngineResearch/: CodeChunk.cpp  InstructionContainer.h  NewBeaEngineResearch.vcxproj  NewBeaEngineResearch.vcxproj.filters  main.cpp  toDo.txt
NewBeaEngineResearch/NewBeaEngineResearch/Debug/: CL.read.1.tlog  CL.write.1.tlog  NewBeaEngineResearch.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb
NewBeaEngineResearch/_ReSharper.NewBeaEngineResearch/ConditionalNames/: .crc
NewBeaEngineResearch/_ReSharper.NewBeaEngineResearch/GeneratedFiles/: .crc
NewBeaEngineResearch/_ReSharper.NewBeaEngineResearch/NamedArguments/: .crc
NewBeaEngineResearch/_ReSharper.NewBeaEngineResearch/PersistentCaches/: 000005.sst  LOG  LOG.old  MANIFEST-000004
NewBeaEngineResearch/include/BeaEngine/: BeaEngine.h
kraken/: CMakeLists.txt  Settings.cpp  Settings.h  kraken.sln  main.cpp
kraken/cmake/: internal_utils.cmake
kraken/cmake/beaengine/: CMakeLists.txt
kraken/kraken/: AsmCode.cpp  AsmCode.h  BasicTypes.h  CMakeLists.txt  ChunkCodeBlock.cpp  ChunkCodeBlock.h  ChunkCodeBlockItem.cpp  ChunkCodeBlockItem.h  ChunkCodeListing.cpp  ChunkCodeListing.h  ChunkContainer.cpp  ChunkContainer.h  CodeBlockInterface.cpp  CodeBlockItemInterface.cpp  CodeChunk.cpp  CodeChunk.h  CodeChunkMap.cpp  CodeChunkMap.h  CodeContainer.cpp  CodeContainer.h  CodeListingInterface.cpp  Decoder.cpp  Decoder.h  Decompiler.cpp  Disassembler.cpp  Disassembler.h  InstructionContainer.cpp  InstructionContainer.h  IntervalTree.h  PEFileLoader.h  PEStructs.h  PeDecoder.cpp  PeDecoder.h  PeDisassembler.cpp  PeDisassembler.h  SSABuilder.cpp  SSAConstArgument.cpp  SSAContext.cpp  SSADefinition.cpp  SSAExpression.cpp  (+12 more)
kraken/kraken/include/kraken/: AsmCode.h  BasicTypes.h  CodeBlockInterface.h  CodeBlockItemInterface.h  CodeChunk.h  CodeChunkMap.h  CodeListingInterface.h  Decoder.h  Decompiler.h  Disassembler.h  PeDecoder.h  SSABuilder.h  SSAConstArgument.h  SSAContext.h  SSADefinition.h  SSAExpression.h  SSAExpressionArgument.h  SSAGraph.h  SSAStatement.h  kraken.h
kraken/kraken_console/: PEFileLoader.cpp  kraken_console.vcxproj  kraken_console.vcxproj.filters  main.cpp
kraken/kraken_gui/: CMakeLists.txt  CodeBlockDummy.h  CodeBlockItemDummy.h  CodeListingDummy.h  CodeModel.cpp  CodeModel.h  DisassemblerModel.cpp  DisassemblerModel.h  FindVaDialog.cpp  FindVaDialog.h  MainWindow.cpp  MainWindow.cpp.autosave  MainWindow.h  kraken_gui.cc  main.qml  mainwindow.ui  res.qrc
kraken/kraken_test/: AsmCodeHelper.cpp  AsmCodeHelper.h  ChunkContainerTest.cpp  ChunkContainerTest.h  CodeChunkHelper.h  CodeChunkMapTest.cpp  CodeChunkTest.cpp  CodeChunkTest.h  DisasmHelper.cpp  DisasmHelper.h  MockChunkContainer.h  MockDisassembler.h  kraken_test.vcxproj  kraken_test.vcxproj.filters  main.cpp
kraken/pin-instr-addresses/: InstrAddresses.cpp  InstrAddresses.sln  InstrAddresses.vcxproj  InstrAddresses.vcxproj.filters  makefile.rules
kraken/pin-trace-bin/: TraceBin.cpp  TraceBin.sln  TraceBin.vcxproj  TraceBin.vcxproj.filters  makefile.rules
kraken/simple_exe/: CMakeLists.txt  simple_exe.cc  simple_exe.vcxproj
kraken/test/: CMakeLists.txt  ChunkContainerTest.cc  ChunkContainerTest.h  CodeChunkHelper.cpp  CodeChunkHelper.h  CodeChunkMapTest.cc  CodeChunkMapTest.h  CodeChunkTest.cc  CodeChunkTest.h  DisassemblerTest.cc  DisassemblerTest.h  MockChunkContainer.h  MockDisassembler.h  test-all.cc
